<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/secondary">

        <TextView
            android:id="@+id/create_account_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="35sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/navy"/>

        <EditText
            android:id="@+id/create_account_email"
            android:layout_marginTop="30dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/your_email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/create_account_password"
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/create_account_password_again"
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_again"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/create_account_submit"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>


        <TextView
            android:id="@+id/create_account_error"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary" />


    </LinearLayout>

</RelativeLayout>